--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,5 @@
 body{
-    background-color:rgb(57, 114, 164);
+    background-color:rgb(85, 87, 88);
     text-align:center;
     font-family:trebuchet ms;
 }
@@ -10,8 +10,40 @@ body{
     height:80px;
 }
 
-#driving{
-    width:500px;
-    height: 280px;
-    border: 6px solid #000000;
+#left-image{
+    float:left;
+    width:0px;
+    height:0px;	
+    border:3px solid black;
 }
+
+#right-image{
+    float:right;
+    width:0px;
+    height: 0px;
+    border:3px solid black;
+}
+
+ul{
+	list-style-type:none;
+	background-color:red;
+	overflow:hidden;
+	width:1500px;
+    margin-left: -60px;}
+
+li{
+    float:left;
+    border-left:3px solid white;
+}
+    
+li a{
+    padding:5px;
+    color:black;
+    text-decoration:none;
+    font-size:10px;}
+    
+li a:hover{color:white;}
+
+#link-1{margin-left:470px;}
+#link-2{margin-left:420px;}
+#link-3{margin-left:420px;}
