--- a/stylesheet.css
+++ b/stylesheet.css
@@ -53,3 +53,20 @@ a{
     text-decoration:none;
     color: White;
 }
+
+section{
+    background-color:#4169E1;
+    height:500px;
+    width:99%;
+    font-size:25px;
+    text-align:left;
+    border-width:5px;
+    border-color:black;
+    border-style:solid;
+}
+
+#team-logo{width:400px;
+    height:400px;
+    float:right;
+    margin-right:10px;
+    margin-top:-20%;}
